gcc/testsuite/rust/rustc/ui/parser/unsafe-foreign-mod-2.rs
extern "C" unsafe {
// { dg-error "" "" { target *-*-* } .-1 }
    unsafe fn foo();
}

fn main() {}

